Updated the current pages and added 2 new ones

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,21 @@
+/*
+.page-content {
+    color: violet;
+}
+*/
+
 .title-bar {
     font-size: large;
+    background-color: deeppink;
+    color: white;
 }
 
 .big-button {
     font-size: xx-large;
+    background-color: darkblue;
+    margin: 1em;
+}
+
+.footer-content {
+    text-align: center;
 }
