attempt to update CSS

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -10,7 +10,7 @@
 
 .big-button {
     font-size: xx-large;
-    background-color: blueviolet;
+    background-color: rgb(231, 8, 212);
     margin: 1em;
 }
 
