Beginning set up for saving

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -57,3 +57,30 @@
     color: white;
     background-color: rgb(167, 12, 214);
 }
+
+/* Dormant Style Classes:
+
+.tabs {
+
+}
+
+.add-button {
+
+}
+
+.journal-dream {
+
+}
+
+.journal-title {
+
+}
+
+.journal-entery {
+
+}
+
+.journal-tags {
+
+}
+*/
