--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -89,6 +89,12 @@
     color: black;
 }
 
+.journal-title .star-button {
+    height: fit-content;
+    width: fit-content;
+    max-width: 70px;
+}
+
 .journal-entery {
 
 }
