--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -62,10 +62,10 @@
 
 /* 
     HERE IS WHAT MUST BE WORKED ON:
-    - Find a way to put spacing between dream titles
+    - Find a way to make spacing between dream titles
     - Find a way to move the button to the right on the entry textbox without fallowing it
     - (For Dev) Set the entries to where there MUST be a title and blank cannot work
-    - ***TO BE CONTINUED!***
+    _ ***TO BE CONTINUED!***
 */
 
 .tabs {
@@ -78,6 +78,12 @@
 
 .add-button {
     --background: var(--dream, #BF40BF);
+    border: #BF40BF;
+    border-radius: 50%;
+    width: 14.5mm;
+    height: 14.5mm;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .journal-dream {
