Fixed the purple CSS problems

--- a/src/pages/ScreenMenu.css
+++ b/src/pages/ScreenMenu.css
@@ -1,13 +1,13 @@
 div {
-    background: #BF40BF;
+    /* background: #BF40BF; */
 }
 
 h1 {
-    color: white;
+    /* color: white;
     text-align: center;
-    padding-top: 5%;
+    padding-top: 5%; */
 }
 
 .icon {
-    color: white;
+    /* color: white; */
 }
