commenting out css unused style

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -83,10 +83,10 @@
     text-decoration: none;
     display: inline-block;
 }
-
+/*
 .journal-dream {
     /* Still working here. */
-}
+/*}*/
 
 .journal-title {
     font-family: monospace;
