Eliminating more redundant code from CSS

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -115,12 +115,8 @@ font-family: monospace;
 
 /* For Journal - Dream Search: */
 
-/* WHAT MUST BE DONE:
-    - Make the calendars more readable!
-*/
-
 .date-info {
-    
+    /* Keep this for now. */
 }
 
 /* Try more stuff. */
