--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -94,6 +94,11 @@
     width: fit-content;
     max-width: 70px;
 }
+.star-button {
+    height: fit-content;
+    width: fit-content;
+    max-width: 70px;
+}
 .journal-entry {
     color: black;
 }
